<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SIF Trade</string>
    <string name="imagem_logo">logo imagem</string>

    <string name="facebook_app_id">171454440860215</string>
    <string name="fb_login_protocol_scheme">fb171454440860215</string>
    <string name="fazer_login_com_google">Fazer login com Google</string>
    <string name="com.crashlytics.useFirebaseAppId" tools:ignore="ExtraTranslation">true</string>

    <string name="uf_prompt">Selecione um Estado</string>
    <string-array name="uf_list">
        <item>Selecione um Estado</item>
        <item>AC</item>
        <item>AL</item>
        <item>AM</item>
        <item>AP</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MG</item>
        <item>MS</item>
        <item>MT</item>
        <item>PA</item>
        <item>PB</item>
        <item>PE</item>
        <item>PI</item>
        <item>PR</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RO</item>
        <item>RR</item>
        <item>RS</item>
        <item>SC</item>
        <item>SE</item>
        <item>SP</item>
        <item>TO</item>
    </string-array>

    <string name="regiao_prompt">Selecione uma Região</string>
    <string-array name="regiao_list">
        <item>Selecione uma Região</item>
    </string-array>

    <string name="produto_prompt">Selecione um Produto</string>
    <string-array name="produto_list">
        <item>Selecione um Produto</item>
        <item>Carvão</item>
        <item>Lenha</item>
        <item>Madeira em pé</item>
        <item>Madeira no pátio</item>
        <item>Celulose</item>
        <item>Terras</item>
        <item>Mudas</item>
    </string-array>

    <string name="fale_conosco_assunto_prompt">Selecione um Assunto</string>
    <string-array name="fale_conosco_assunto_list">
        <item>Selecione um Assunto</item>
        <item>Dúvidas</item>
        <item>Sugestões</item>
        <item>Reclamações</item>
        <item>Elogios</item>
        <item>Outros</item>
    </string-array>

    <string name="fale_conosco_setor_prompt">Selecione um Setor</string>
    <string-array name="fale_conosco_setor_list">
        <item>Selecione um Setor</item>
        <item>Eventos e cursos</item>
        <item>Projetos e Gt\'s</item>
        <item>Comunicação</item>
        <item>Faturamento</item>
        <item>Gerência</item>
        <item>Outros / não sei</item>
    </string-array>

    <string name="Floresta_4_0">Floresta 4.0</string>
    <string name="Polen_Startup_Florestal">Pólen Startup Florestal</string>
    <string name="Bem_vindo_ao">Bem vindo ao</string>
    <string name="SIF_TRADE">" SIF TRADE"</string>
    <string name="Aqui_voce_encontra_">Aqui você encontra as\ninformações mais\nrecentes sobre o mercado\nflorestal.</string>
    <string name="Encontre_um_fornecedor">Encontre um fornecedor</string>
    <string name="Area_dos_associados">Área dos associados</string>
    <string name="Noticias">Notícias</string>
    <string name="Eventos">Eventos</string>
    <string name="Fale_Conosco">Fale Conosco</string>
    <string name="Sair">Sair</string>
    <string name="ou">ou</string>
    <string name="email">email</string>
    <string name="senha">senha</string>
    <string name="Login">Login</string>
    <string name="Recuperar_Senha">Recuperar Senha</string>
    <string name="nome">nome</string>
    <string name="repita_a_senha">repita a senha</string>
    <string name="Registrar">Registrar</string>
    <string name="Tabelas_SIF">Tabelas SIF</string>
    <string name="Consulte_os_valores_">Consulte os valores praticados no mercado florestal de MG.</string>
    <string name="UF_dois_pontos">"UF: "</string>
    <string name="Regiao_dois_pontos">"Região: "</string>
    <string name="Produto_dois_pontos">"Produto: "</string>
    <string name="Consultar">Consultar</string>
    <string name="Ultima_atualizacao_dois_pontos">Última atualização:</string>
    <string name="logo_header">logo header</string>
    <string name="Sociedade_de_Invest_">Sociedade de\nInvestigações\nFlorestais</string>
    <string name="empresas_logos">empresas logos</string>
    <string name="Parceria_Universidade_Empresa_">Parceria Universidade - Empresa\nDesde 1974</string>
    <string name="sif_c_2020">SIF © 2020</string>
    <string name="Unidade_dois_pontos">"Unidade: "</string>
    <string name="Cadastrar">Cadastrar</string>
    <string name="Sim">Sim</string>
    <string name="Nao">Não</string>

</resources>
