<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include
        android:id="@+id/header"
        layout="@layout/header" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/text_footer"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimary">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/view_user_logado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/btn_user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""/>

                    <TextView
                        android:id="@+id/btn_user_logout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:onClick="userLogout"
                        android:text="@string/Sair" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Bem_vindo_ao"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/SIF_TRADE"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:text="@string/Aqui_voce_encontra_"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <com.google.android.material.button.MaterialButton
                    style="@style/botao_confirmar"
                    android:layout_marginTop="10dp"
                    android:onClick="btnTabelasSIF"
                    android:text="@string/Tabelas_SIF" />

                <com.google.android.material.button.MaterialButton
                    style="@style/botao_confirmar"
                    android:layout_marginTop="10dp"
                    android:text="@string/Encontre_um_fornecedor" />

                <com.google.android.material.button.MaterialButton
                    style="@style/botao_confirmar"
                    android:layout_marginTop="10dp"
                    android:text="@string/Area_dos_associados" />

                <com.google.android.material.button.MaterialButton
                    style="@style/botao_confirmar"
                    android:layout_marginTop="10dp"
                    android:text="@string/Noticias" />

                <com.google.android.material.button.MaterialButton
                    style="@style/botao_confirmar"
                    android:layout_marginTop="10dp"
                    android:text="@string/Eventos" />

                <com.google.android.material.button.MaterialButton
                    style="@style/botao_confirmar"
                    android:layout_marginTop="10dp"
                    android:text="@string/Fale_Conosco" />
            </LinearLayout>
        </ScrollView>

        <include
            android:id="@+id/text_footer"
            layout="@layout/footer"/>

    </RelativeLayout>

</LinearLayout>