<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ExibeTabelaSIF">

    <include
        android:id="@+id/header"
        layout="@layout/header" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/text_footer"
            android:layout_alignParentTop="true"
            android:background="@android:color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:orientation="vertical"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/Tabelas_SIF"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center_horizontal"
                        android:text="@string/Consulte_os_valores_"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp" />

                </LinearLayout>


                <TextView
                    android:id="@+id/exibe_tabela_uf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:text="@string/UF_dois_pontos"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/exibe_tabela_regiao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:text="@string/Regiao_dois_pontos"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/exibe_tabela_unidade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:text="@string/Unidade_dois_pontos"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <TableLayout
                    android:id="@+id/exibe_tabela_tableLayout"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                </TableLayout>


            </LinearLayout>

        </ScrollView>

        <include
            android:id="@+id/text_footer"
            layout="@layout/footer" />

    </RelativeLayout>

</LinearLayout>