<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <include
        android:id="@+id/header"
        layout="@layout/header" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/text_footer"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimary"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:orientation="vertical">

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/btn_login_com_google"
                    android:layout_width="350dp"
                    android:layout_height="55dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp" />

                <com.facebook.login.widget.LoginButton
                    xmlns:facebook="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/btn_login_com_facebook"
                    android:layout_width="345dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    facebook:com_facebook_login_text="Fazer login com Facebook"
                    facebook:com_facebook_logout_text="Sair" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="25dp"
                    android:text="@string/ou"
                    android:textColor="@android:color/white" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/input_texts"
                    android:layout_marginTop="25dp"
                    android:hint="@string/email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/input_texts"
                    android:layout_marginTop="15dp"
                    android:hint="@string/senha">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_input_senha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent" >

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_login_com_senha"
                        style="@style/botao_confirmar"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/Login" />

                    <TextView
                        android:id="@+id/btn_registrar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/btn_login_com_senha"
                        android:layout_alignStart="@id/btn_login_com_senha"
                        android:layout_marginBottom="10dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/Registrar"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/btn_recuperar_senha"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/btn_login_com_senha"
                        android:layout_alignEnd="@id/btn_login_com_senha"
                        android:layout_marginBottom="10dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/Recuperar_Senha"
                        android:textColor="@android:color/white" />

                </RelativeLayout>

            </LinearLayout>

        </ScrollView>

        <include
            android:id="@+id/text_footer"
            layout="@layout/footer" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/my_progress_bar"
            android:layout_centerInParent="true"
            android:visibility="gone"/>

    </RelativeLayout>

</LinearLayout>