<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FaleConoscoActivity">

    <include
        android:id="@+id/header"
        layout="@layout/header" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/text_footer"
            android:layout_alignParentTop="true"
            android:background="@android:color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:orientation="vertical"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/Fale_Conosco"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center_horizontal"
                        android:text="Agora você possui um canal de comunicação direta com a SIF."
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="end"
                        android:layout_gravity="center_vertical"
                        android:text="Associado: "
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />
                    <RadioGroup
                        android:id="@+id/fale_conosco_radioGroup_associado"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="7"
                        android:layout_marginEnd="20dp"
                        android:orientation="horizontal">
                        <RadioButton
                            android:id="@+id/fale_conosco_radio_associado_sim"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Sim"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                        <RadioButton
                            android:id="@+id/fale_conosco_radio_associado_nao"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Nao"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="end"
                        android:layout_gravity="center_vertical"
                        android:text="Assunto: "
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />
                    <Spinner
                        android:id="@+id/fale_conosco_spn_assunto"
                        style="@style/spinner_fale_conosco"
                        android:entries="@array/fale_conosco_assunto_list"
                        android:prompt="@string/fale_conosco_assunto_prompt"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="end"
                        android:layout_gravity="center_vertical"
                        android:text="Setor: "
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />
                    <Spinner
                        android:id="@+id/fale_conosco_spn_setor"
                        style="@style/spinner_fale_conosco"
                        android:entries="@array/fale_conosco_setor_list"
                        android:prompt="@string/fale_conosco_setor_prompt"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="50dp"
                    android:orientation="horizontal">
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/fale_conosco_btn_via_email"
                        style="@style/botao_menor_branco"
                        android:text="Via E-mail" />
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/fale_conosco_btn_via_chat"
                        style="@style/botao_menor_branco"
                        android:layout_marginStart="50dp"
                        android:onClick="btnViaChat"
                        android:text="Via Chat" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <include
            android:id="@+id/text_footer"
            layout="@layout/footer" />

    </RelativeLayout>

</LinearLayout>